Fix(WP): Spacing in template

--- a/packages/comet-canvas/style.css
+++ b/packages/comet-canvas/style.css
@@ -23,6 +23,9 @@
 .page-with-sidebar__columns__column:is(main) {
   grid-column: span 3;
 }
+.page-with-sidebar__columns__column:is(main) > .column__inner > .group:not(:first-child) {
+  padding-block: var(--spacing-md);
+}
 .page-header[data-background=white] + .page-section[data-background=white]:has(.page-with-sidebar) {
   padding-block-start: var(--spacing-md);
 }
